# file-center

./: .gitignore  LICENSE  README.md
file-center-client/: README.md  package-lock.json  package.json
file-center-client/src/: main.js
file-center-client/src/components/: Ping.vue  Register.vue
file-center-server/: .env  Cargo.toml  Dockerfile  Makefile  build.rs  file-center-db
file-center-server/script/: add_access.sh  download_file.sh  health.sh  list_files.sh  list_users.sh  login-user-bar.sh  login-user-foo.sh  login.sh  ping.sh  register.sh  remove_access.sh  request.json  test.sh  upload_file.sh
file-center-server/sql/: delete.sql  drop.sql  insert.sql  schema.sql
file-center-server/src/: lib.rs  main.rs
file-center-server/src/api/: access_controller.rs  account_controller.rs  file_controller.rs  mod.rs
file-center-server/src/config/: constants.rs  mod.rs  service_config.rs
file-center-server/src/errors/: error.rs
file-center-server/src/extractors/: mod.rs
file-center-server/src/handlers/: access.rs  account.rs  file.rs  mod.rs
file-center-server/src/handlers/api/: access.rs  account.rs  file.rs  mod.rs
file-center-server/src/middlewares/: auth.rs  authentication.rs
file-center-server/src/models/: access.rs  access_user.rs  file.rs  mod.rs  role.rs  user.rs
file-center-server/src/payloads/requests/: mod.rs
file-center-server/src/payloads/responses/: mod.rs
file-center-server/src/routers/: router.rs
file-center-server/src/services/: access.rs  access_service.rs  account.rs  account_service.rs  file.rs  file_service.rs  mod.rs
file-center-server/src/utils/: file.rs  hash.rs  http.rs  jwt.rs  mod.rs
file-center-server/templates/: access.html  home.html  list.html  login.html  logout.html  register.html  upload.html
