[package]
authors = ["Mahdi Robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"
name = "file-center"
version = "0.1.0"
build = "build.rs"

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1.1.1"
actix-service = "1.0.5"
actix-web = "2.0"
actix-identity = "0.2.1"
bcrypt = "0.8.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
jsonwebtoken = "7.1.0"
log = "0.4.8"
serde_json = "1.0.53"
chrono = "0.4.11"
actix-multipart = "0.2.0"
actix-files = "0.2.1"
anyhow = "1.0.30"
strum = "0.18.0"
strum_macros = "0.18.0"
lazy_static = "1.4.0"
envy = "0.4.1"
tera = "1.2.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"

[dependencies.sqlx]
features = ["runtime-tokio", "sqlite", "macros"]
default-features = false
version = "0.3.5"

[dependencies.serde]
features = ["derive"]
version = "1.0.110"

[build-dependencies]

