[package]
authors = ["Mahdi Robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"
name = "file-center"
version = "0.1.0"

[dependencies]
actix-cors = "0.3.0"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = "3.0.1"
actix-identity = "0.3.0"
actix-http = "2.0.0"
bcrypt = "0.8.2"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
jsonwebtoken = "7.2.0"
log = "0.4.11"
serde_json = "1.0.57"
chrono = "0.4.15"
actix-multipart = "0.3.0"
actix-files = "0.3.0"
anyhow = "1.0.32"
strum = "0.19.2"
strum_macros = "0.19.2"
lazy_static = "1.4.0"
envy = "0.4.1"
tera = "1.5.0"
time = "0.2.19"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.1"

[dependencies.sqlx]
features = ["runtime-tokio", "sqlite", "macros"]
default-features = false
version = "0.3.5"

[dependencies.serde]
features = ["derive"]
version = "1.0.116"

[dependencies.reqwest]
features = ["json"]
version = "0.10.8"

[dependencies.tokio]
features = ["fs"]
version = "0.2.22"

[build-dependencies]

