[package]
authors = ["Mahdi Robatipoor <mahdi.robatipoor@gmail.com>"]
edition = "2018"
name = "file-center"
version = "0.1.0"

[dependencies]
actix-cors = "0.5.4"
actix-service = "1.0.6"
actix-web = "3.3.2"
actix-rt = "2.1.0"
actix-identity = "0.3.1"
actix-http = "2.2.0"
bcrypt = "0.9.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
futures = "0.3.12"
jsonwebtoken = "7.2.0"
log = "0.4.14"
serde_json = "1.0.61"
chrono = "0.4.19"
actix-multipart = "0.3.0"
actix-files = "0.5.0"
anyhow = "1.0.38"
strum = "0.20.0"
strum_macros = "0.20.1"
lazy_static = "1.4.0"
envy = "0.4.2"
tera = "1.6.1"
time = "0.2.25"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.8.2"

[dependencies.sqlx]
features = ["runtime-tokio-rustls", "sqlite", "macros"]
default-features = false
version = "0.5.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.reqwest]
features = ["json"]
version = "0.11.0"

[dependencies.tokio]
features = ["fs"]
version = "1.1.0"

[build-dependencies]

